...
    var body: some View {
        ScrollView {
            VStack {
                descriptionText
            }
        }
        .navigationTitle("Terms of Use")
        .navigationBarBackButtonHidden(true)
        .toolbar {
            ToolbarItem(placement: .topBarLeading) {
                BackButtonView() {
                    // Check where the view is called from
                    if coordinator.modalPath.isEmpty {
...
                }
            }
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    coordinator.closeModal()
                } label: {
                    Image(systemName: "house")
                        .foregroundStyle(Color.mycolor.myAccent)
                }
            }
        }
    }
    
...
